--- a/src/main/resources/archetype-resources/gitignore.sample
+++ b/src/main/resources/archetype-resources/gitignore.sample
@@ -1,9 +1,18 @@
 /target/
 /.settings/
-/overrideProperties/
-/tmp/
-nohup.out
+.commit
 .idea/
-.classpath
-.project
-database/
+*.iml
+tmp/*log*
+tmp/*docker*
+tmp/pid
+overrideProperties/
+nohup.out
+database/*db*
+database/*business*
+docs/_build
+src/main/resources/templates/node_modules/
+src/main/resources/scripts/node_modules/
+
+/.gradle/
+.keystore
