--- a/src/main/resources/archetype-resources/overrideProperties/config/swf.properties
+++ b/src/main/resources/archetype-resources/overrideProperties/config/swf.properties
@@ -60,9 +60,9 @@ in.succinct.bpp.shell.registry.id=registry.becknprotocol.io..LREG
 in.succinct.bpp.shell.country.iso.3=IND
 in.succinct.bpp.shell.country.iso.2=IN
 
-#in.succinct.bpp.${artifactId}.storeUrl=https://store_fqdomain/index.php/wp-json/wc/v3
-#in.succinct.bpp.${artifactId}.clientId=
-#in.succinct.bpp.${artifactId}.secret=
-#in.succinct.bpp.${artifactId}.city=std:080
-#in.succinct.bpp.${artifactId}.hmac.key=some_secret_phrase
+#in.succinct.${artifactId}.storeUrl=https://store_fqdomain/index.php/wp-json/wc/v3
+#in.succinct.${artifactId}.clientId=
+#in.succinct.${artifactId}.secret=
+#in.succinct.${artifactId}.city=std:080
+#in.succinct.${artifactId}.hmac.key=some_secret_phrase
 
