--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -63,6 +63,18 @@
         <version>LATEST</version>
         <scope>test</scope>
     </dependency>
+        <dependency>
+            <groupId>in.succinct</groupId>
+            <artifactId>bpp.shell</artifactId>
+            <version>[1.0-SNAPSHOT,)</version>
+        </dependency>
+
+      <dependency>
+          <groupId>com.github.venkatramanm.swf-all</groupId>
+          <artifactId>swf</artifactId>
+          <version>${symbol_dollar}{revision}</version>
+      </dependency>
+
       <dependency>
           <groupId>com.github.venkatramanm.swf-all</groupId>
           <artifactId>swf</artifactId>
