--- a/src/main/resources/archetype-resources/gitignore.sample
+++ b/src/main/resources/archetype-resources/gitignore.sample
@@ -1,18 +1,17 @@
 /target/
 /.settings/
-.commit
-.idea/
-*.iml
+/overrideProperties/
 tmp/*log*
 tmp/*docker*
 tmp/pid
-overrideProperties/
 nohup.out
-database/*db*
-database/*business*
+.idea/
+.classpath
+.project
+database/
+.commit
+*.iml
 docs/_build
-src/main/resources/templates/node_modules/
 src/main/resources/scripts/node_modules/
-
 /.gradle/
 .keystore
