--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -65,7 +65,7 @@
         </dependency>
         <dependency>
             <groupId>in.succinct</groupId>
-            <artifactId>bpp.shell</artifactId>
+            <artifactId>bpp.core</artifactId>
             <version>[1.0-SNAPSHOT,)</version>
         </dependency>
         <dependency>
