--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -9,7 +9,6 @@
   <description>${artifactId}</description>
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <revision>2.15-SNAPSHOT</revision>
     </properties>
     <build>
         <plugins>
@@ -65,13 +64,18 @@
         </dependency>
         <dependency>
             <groupId>in.succinct</groupId>
-            <artifactId>bpp.core</artifactId>
+            <artifactId>bpp.shell</artifactId>
             <version>[1.0-SNAPSHOT,)</version>
         </dependency>
         <dependency>
-          <groupId>com.github.venkatramanm.swf-all</groupId>
-          <artifactId>swf</artifactId>
-          <version>${symbol_dollar}{revision}</version>
+            <groupId>in.succinct</groupId>
+            <artifactId>bpp.search</artifactId>
+            <version>[1.0-SNAPSHOT,)</version>
+        </dependency>
+        <dependency>
+            <groupId>in.succinct</groupId>
+            <artifactId>${adaptor}</artifactId>
+            <version>[1.0-SNAPSHOT,)</version>
         </dependency>
         <dependency>
           <groupId>com.github.venkatramanm.swf-all</groupId>
