--- a/src/test/resources/projects/basic/archetype.properties
+++ b/src/test/resources/projects/basic/archetype.properties
@@ -2,5 +2,6 @@
 version=0.1-SNAPSHOT
 groupId=archetype.it
 artifactId=basic
-archetypeVersion=some thing
+#archetypeVersion=some thing
 package=package1
+adaptor=bpp.woocommerce
