--- a/src/main/resources/archetype-resources/overrideProperties/config/swf.properties
+++ b/src/main/resources/archetype-resources/overrideProperties/config/swf.properties
@@ -54,15 +54,17 @@ swf.jdbc.set.dbschema.command=set schema public
 #swf.key.entry.succinct.password=myentrypassword
 
 
-beckn.auth.enabled=true
 in.succinct.bpp.shell.registry.url=https://registry.becknprotocol.io/subscribers
 in.succinct.bpp.shell.registry.id=registry.becknprotocol.io..LREG
+in.succinct.bpp.shell.registry.auto.register=true
 in.succinct.bpp.shell.country.iso.3=IND
 in.succinct.bpp.shell.country.iso.2=IN
+in.succinct.bpp.shell.adaptor=${adaptor}
 
-#in.succinct.${artifactId}.storeUrl=https://store_fqdomain/index.php/wp-json/wc/v3
-#in.succinct.${artifactId}.clientId=
-#in.succinct.${artifactId}.secret=
-#in.succinct.${artifactId}.city=std:080
-#in.succinct.${artifactId}.hmac.key=some_secret_phrase
+#in.succinct.bpp.${adaptor}.storeUrl=https://store_fqdomain/index.php/wp-json/wc/v3
+#in.succinct.bpp.${adaptor}.clientId=
+#in.succinct.bpp.${adaptor}.secret=
+#in.succinct.bpp.${adaptor}.city=std:080
+#in.succinct.bpp.${adaptor}.hmac.key=some_secret_phrase
 
+beckn.auth.enabled=true
