--- a/src/main/resources/archetype-resources/pom.xml
+++ b/src/main/resources/archetype-resources/pom.xml
@@ -74,7 +74,7 @@
         </dependency>
         <dependency>
             <groupId>in.succinct</groupId>
-            <artifactId>${adaptor}</artifactId>
+            <artifactId>bpp.${adaptor}</artifactId>
             <version>[1.0-SNAPSHOT,)</version>
         </dependency>
         <dependency>
