better Logger defaults

--- a/src/main/resources/archetype-resources/overrideProperties/config/logger.properties
+++ b/src/main/resources/archetype-resources/overrideProperties/config/logger.properties
@@ -14,14 +14,20 @@ com.venky.core.log.WarningFileHandler.level=WARNING
 handlers=com.venky.core.log.WarningFileHandler  com.venky.core.log.InfoFileHandler
 logger.useParentHandlers=false
 
-.level=FINE
+
+.level=INFO
 com.venky.swf.plugins.background.core.level=FINEST
-com.venky.swf.db.Database.level=FINEST
+com.venky.swf.db.Database.level=FINE
 com.venky.swf.sql.level=FINE
 com.venky.swf.db.table.Table.level=FINE
 com.venky.swf.plugins.background.core.level=FINEST
 com.venky.swf.controller.ModelController.level=FINEST
 #com.venky.core.log.TimerStatistics.level=FINE
 com.venky.digest.level=FINEST
+#com.venky.core.log.TimerStatistics.level=TIMER
+#com.venky.swf.plugins.background.eventloop.jetty.level=TIMER
 
-
+java.level=INFO
+sun.level=INFO
+java.net.http/jdk.level=INFO
+jdk.level=INFO
